# operating-systems

lab_1/ggj/: ggj.cpp  ggj.sln  ggj.vcxproj  ggj.vcxproj.filters
lab_1/main/: main.cpp
lab_1/main2/: main2.cpp  main2.sln  main2.vcxproj  main2.vcxproj.filters  main4.cpp
lab_2/: CMakeLists.txt  main.cpp
lab_3/: CMakeLists.txt  main.c  main.cpp
lab_3/img/: img.cpp  img.sln  img.vcxproj  img.vcxproj.filters
